# rustpress-ai-prompts

./: README.md  RUSTPRESS-THEME-PROMPT.md
app/: PROMPT.md
app/advanced-app/: Cargo.toml  README.md  app.toml
app/advanced-app/migrations/: 001_init.sql
app/advanced-app/src/: lib.rs  models.rs  services.rs
app/advanced-app/src/auth/: config.rs  handlers.rs  mod.rs  models.rs  service.rs
app/advanced-app/src/extractors/: mod.rs
app/advanced-app/src/handlers/: admin.rs  categories.rs  comments.rs  feed.rs  media.rs  mod.rs  posts.rs  search.rs  tags.rs
app/advanced-app/src/middleware/: auth.rs  cache.rs  mod.rs  rate_limit.rs  view_counter.rs
app/sample-app/: Cargo.toml  README.md
app/sample-app/src/: main.rs
function/: PROMPT.md
function/advanced-function/: Cargo.toml  README.md  function.toml
function/advanced-function/src/: lib.rs
function/sample-function/: Cargo.toml  README.md
function/sample-function/src/: lib.rs
plugin/: PROMPT.md
plugin/advanced-plugin/: Cargo.toml  README.md  plugin.toml
plugin/advanced-plugin/migrations/: 001_init.sql
plugin/advanced-plugin/src/: lib.rs
plugin/advanced-plugin/src/api/: mod.rs
plugin/advanced-plugin/src/hooks/: mod.rs
plugin/advanced-plugin/src/models/: mod.rs
plugin/advanced-plugin/src/services/: mod.rs
plugin/sample-plugin/: Cargo.toml  README.md  plugin.toml
plugin/sample-plugin/migrations/: 001_init.sql
plugin/sample-plugin/src/: lib.rs
theme/advanced-theme/: README.md  theme.toml
theme/advanced-theme/assets/css/: dark-mode.css  main.css
theme/advanced-theme/assets/js/: navigation.js  theme.js
theme/advanced-theme/patterns/: features-grid.html  hero-cta.html
theme/advanced-theme/templates/: base.html  index.html  page.html  single.html
theme/advanced-theme/templates/partials/: footer.html  header.html
theme/sample-theme/: README.md  theme.toml
theme/sample-theme/assets/css/: style.css
theme/sample-theme/assets/js/: main.js
theme/sample-theme/parts/: footer.html  header.html  pagination.html
theme/sample-theme/templates/: 404.html  archive.html  base.html  home.html  page.html  single.html
