[package]
name = "rustpress-blog-api"
version = "1.0.0"
edition = "2021"
description = "A comprehensive blog API for RustPress"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
rustpress-apps = "0.1"
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "uuid", "chrono"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
validator = { version = "0.18", features = ["derive"] }
tracing = "0.1"
slug = "0.1"
pulldown-cmark = "0.10"
rss = "2"
mime_guess = "2"
tokio-util = { version = "0.7", features = ["io"] }

# Authentication dependencies
jsonwebtoken = "9"
argon2 = "0.5"
rand = "0.8"
async-trait = "0.1"
