[package]
name = "sample-app"
version = "1.0.0"
edition = "2021"
description = "A simple RustPress app example with todo API"

[dependencies]
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres"] }
validator = { version = "0.16", features = ["derive"] }
tracing = "0.1"
