[package]
name = "rustpress-advanced-hooks"
version = "1.0.0"
edition = "2021"
description = "Comprehensive hooks system for RustPress"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
rustpress-functions = "0.1"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
tracing = "0.1"
uuid = { version = "1", features = ["v4"] }
url = "2"
pulldown-cmark = "0.10"
