[package]
name = "sample-hooks"
version = "1.0.0"
edition = "2021"
description = "Sample RustPress hooks and functions"

[dependencies]
async-trait = "0.1"
tokio = { version = "1.0", features = ["sync"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
chrono = "0.4"
