[package]
name = "rustpress-analytics"
version = "2.0.0"
edition = "2021"
description = "Complete analytics solution for RustPress"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
rustpress-plugins = { version = "1.0" }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["sync", "time"] }
axum = "0.7"
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "chrono", "uuid"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
tracing = "0.1"
thiserror = "1.0"
validator = { version = "0.16", features = ["derive"] }
maxminddb = "0.24"
user-agent-parser = "0.3"
ipnetwork = "0.20"
csv = "1.3"
